# india-innovates-backend

./: .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml  results.json  run_all.sh
agents/: chat.py  city_service.py  coordination_analyzer.py  disinfo_detector.py  entity_classifier.py  extraction.py  impact_direction_classifier.py  india_entity_service.py  india_impact.py  indic_nlp.py  inference.py  news_priority.py  policy_brief.py  report.py  report_orchestrator.py  resolution.py  scoring_config.py  temporal.py  weather_anomaly.py  weather_threshold_service.py
alembic/: env.py
api/: __init__.py
docs/: architecture-overview.md  architecture.dot  groq-structured-output.md  plan.md  references.md  setup.md  weather-plan.md
graphs/: graph_builder.py  prompts.py  schemas.py
models/: __init__.py  city_metadata.py  climate_normal.py  coordination_pattern.py  database.py  detected_signal.py  disinfo_signal.py  domain_report.py  domain_stability.py  domain_weight_cache.py  entity_alias.py  entity_state.py  entity_type_domain_mapping.py  india_seed_entity.py  policy_brief.py  prediction.py  scoring_weight.py  scraped_article.py  source_config.py  weather_anomaly.py  weather_observation.py  weather_threshold.py
notebooks/: scraper-testing.ipynb
scheduler/: consumer.py  producer.py  report_scheduler.py  signal_worker.py  weather_producer.py
scrapers/: circuit_breaker.py  india_gov.py  news_rss.py  rbi_api.py  weather.py
scripts/: benchmark_extraction.py  check_feed_freshness.py  count_feed_coverage.py  fix_failing_feeds.py  reset.py  seed_all.py  seed_city_metadata.py  seed_entity_mappings.py  seed_scoring_weights.py  seed_weather_thresholds.py  test_admin_api.py  test_admin_api.sh  test_city_service.py  test_coordination_analyzer.py  test_seeds.py  (+10 more)
(+34 files in other folders)
