[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "gliner2>=1.2.4",
    "graphviz>=0.21",
    "kafka-python-ng>=2.2.2",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=0.2.0",
    "lxml[html-clean]>=6.0.2",
    "neo4j>=6.1.0",
    "newspaper3k>=0.2.8",
    "numpy>=2.4.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "rss-parser>=2.1.1",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
